# xdg-desktop-portal-termfilechooser

./: .editorconfig  LICENSE  README.md  meson.build  org.freedesktop.impl.portal.desktop.termfilechooser.service.in  termfilechooser.portal  xdg-desktop-portal-termfilechooser.5.scd
contrib/: config.sample  fzf-wrapper.sh  ranger-wrapper.sh
contrib/systemd/: xdg-desktop-portal-termfilechooser.service.in
include/: config.h  filechooser.h  logger.h  xdpw.h
src/core/: config.c  logger.c  main.c  request.c
src/filechooser/: filechooser.c
